# figma2lvgl

./: .gitignore  CHANGELOG.md  README.md  child_registry.py  figma_parser.py  generator.py  generic_child.py  home_node_home_screen.xml  home_node_home_screen_0_96.xml  ili9486.xml  main.py  parser.py  pyproject.toml  selection.xml
.github/workflows/: publish.yml
children/: bar.py  base.py  icon.py  label.py
core/: child_registry.py  cmake_generator.py  config_name.py  context.py  figma_parser.py  generator.py  generic_child.py  parser.py
core/emit/: layouts.py
core/model/: child.py
core/templates/: bar_templates.py  image_templates.py  label_templates.py  screen_template.py
core/utils/: figma_helpers.py  template_loader.py
emit/: c_file.py  h_file.py  layouts.py
examples/espidf/ili9486/: CMakeLists.txt
examples/espidf/ili9486/main/: CMakeLists.txt  idf_component.yml  main.c
examples/ili9486/: sdkconfig.defaults  sdkconfig.old
examples/ili9486/components/lcd_device/: display.c  display.h
examples/ili9486/components/lcd_device/priv_src/: ili9486_display.c  ili9486_display.h
examples/ili9486/main/: CMakeLists.txt  idf_component.yml  main.c
examples/simple/: CMakeLists.txt
examples/simple/components/lcd_device/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lcd_device.c
examples/simple/components/lcd_device/priv_src/: ili9486_display.c  ssd1306_display.c
examples/simple/components/lcd_device/priv_src/driver/: esp_ili9486_panel.c  esp_ili9486_panel.h
examples/simple/main/: main.c
figma2lvgl/: main.py
figma2lvgl/core/: child_registry.py  cmake_generator.py  figma_parser.py  generator.py
figma2lvgl/core/model/: screen.py
figma2lvgl/core/utils/: code_buffer.py  template_loader.py  utils.py
figma2lvgl/tools/: image_converter.py
static_src/: ui_defs.h
templates/: bar_templates.py  icon_templates.py  label_templates.py
tools/: LVGLImage.py  image_converter.py
ui_component/: CMakeLists.txt
ui_component/runtime/: lvgl_port_sim.h  ui_defs.h  ui_worker.c
ui_component/runtime_v1_0_0/src/: ui_worker.c
ui_component/runtime_v2_0_0/include/: ui_worker.h
utils/: figma_helpers.py  utils.py
